@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,6 +38,7 @@ import org.jkiss.dbeaver.model.DBPImageProvider;
 import org.jkiss.dbeaver.model.DBPObject;
 import org.jkiss.dbeaver.model.navigator.DBNNode;
 import org.jkiss.dbeaver.model.navigator.DBNNodeReference;
+import org.jkiss.dbeaver.model.navigator.DBNUtils;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.DBRRunnableWithResult;
 import org.jkiss.dbeaver.model.runtime.load.AbstractLoadService;
@@ -62,15 +63,21 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
 
     private static final String DIALOG_ID = "DBeaver.SelectDatabaseObjectDialog";//$NON-NLS-1$
 
-    private String listId;
-    private boolean singleSelection;
+    private final String listId;
+    private final boolean singleSelection;
 
     protected List<T> objects;
     protected List<T> selectedObjects = new ArrayList<>();
     protected DatabaseObjectListControl<T> objectList;
 
-    public ObjectListDialog(Shell parentShell, String title, boolean singleSelection, String listId, Collection<T> objects, Collection<T> selected)
-    {
+    public ObjectListDialog(
+        @NotNull Shell parentShell,
+        @NotNull String title,
+        boolean singleSelection,
+        @NotNull String listId,
+        @NotNull Collection<T> objects,
+        @Nullable Collection<T> selected
+    ) {
         super(parentShell, title);
         this.singleSelection = singleSelection;
         this.listId = listId;
@@ -86,24 +93,31 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
         return null;//UIUtils.getDialogSettings(DIALOG_ID + "." + listId);
     }
 
+    @NotNull
     @Override
-    protected Composite createDialogArea(Composite parent)
-    {
+    protected Composite createDialogArea(@NotNull Composite parent) {
         Composite group = super.createDialogArea(parent);
         group.setLayoutData(new GridData(GridData.FILL_BOTH));
 
         createUpperControls(group);
 
-        objectList = createObjectSelector(group, singleSelection, listId, selectedObjects, false, new DBRRunnableWithResult<>() {
-            @Override
-            public void run(DBRProgressMonitor monitor) throws InvocationTargetException {
-                try {
-                    result = getObjects(monitor);
-                } catch (DBException e) {
-                    throw new InvocationTargetException(e);
+        objectList = createObjectSelector(
+            group,
+            singleSelection,
+            listId,
+            selectedObjects,
+            false,
+            new DBRRunnableWithResult<>() {
+                @Override
+                public void run(DBRProgressMonitor monitor) throws InvocationTargetException {
+                    try {
+                        result = getObjects(monitor);
+                    } catch (DBException e) {
+                        throw new InvocationTargetException(e);
+                    }
                 }
             }
-        });
+        );
         objectList.createProgressPanel();
         GridData gd = new GridData(GridData.FILL_BOTH);
         gd.minimumHeight = 300;
@@ -111,15 +125,16 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
         objectList.setLayoutData(gd);
         objectList.getSelectionProvider().addSelectionChangedListener(event -> {
             IStructuredSelection selection = (IStructuredSelection) event.getSelection();
+            if (selection.isEmpty()) {
+                return;
+            }
             selectedObjects.clear();
             selectedObjects.addAll(selection.toList());
-            if (!isModeless()) {
-                getButton(IDialogConstants.OK_ID).setEnabled(!selectedObjects.isEmpty());
-            }
+            updateButtons();
         });
         objectList.setDoubleClickHandler(event -> {
-            if (isModeless() || getButton(IDialogConstants.OK_ID).isEnabled()) {
-                okPressed();
+            if (isDialogComplete()) {
+                UIUtils.asyncExec(this::okPressed);
             }
         });
 
@@ -130,34 +145,42 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
         return group;
     }
 
+    protected boolean isDialogComplete() {
+        return !selectedObjects.isEmpty();
+    }
+
+    protected void updateButtons() {
+        enableButton(IDialogConstants.OK_ID, isDialogComplete());
+    }
+
     @NotNull
-    protected static <T extends DBPObject> DatabaseObjectListControl<T> createObjectSelector(
-        Composite group,
+    protected DatabaseObjectListControl<T> createObjectSelector(
+        @NotNull Composite group,
         boolean singleSelection,
-        String listId,
-        List<T> selectedObjects,
-        DBRRunnableWithResult<List<T>> objectReader
+        @NotNull String listId,
+        @NotNull List<T> selectedObjects,
+        @NotNull DBRRunnableWithResult<List<T>> objectReader
     ) {
         return createObjectSelector(group, singleSelection, listId, selectedObjects, true, objectReader);
     }
     
     @NotNull
-    private static <T extends DBPObject> DatabaseObjectListControl<T> createObjectSelector(
-        Composite group,
+    private DatabaseObjectListControl<T> createObjectSelector(
+        @NotNull Composite group,
         boolean singleSelection,
-        String listId,
-        List<T> selectedObjects,
+        @NotNull String listId,
+        @NotNull List<T> selectedObjects,
         boolean isSetFocusAfterLoad,
-        DBRRunnableWithResult<List<T>> objectReader
+        @NotNull DBRRunnableWithResult<List<T>> objectReader
     ) {
-        return new DialogObjectListControl<>(group, singleSelection, listId, objectReader, isSetFocusAfterLoad, selectedObjects);
+        return new DialogObjectListControl(group, singleSelection, listId, objectReader, isSetFocusAfterLoad, selectedObjects);
     }
 
-    protected List<T> getObjects(DBRProgressMonitor monitor) throws DBException {
+    protected List<T> getObjects(@NotNull DBRProgressMonitor monitor) throws DBException {
         return objects;
     }
 
-    protected void createUpperControls(Composite composite) {
+    protected void createUpperControls(@NotNull Composite composite) {
 
     }
 
@@ -167,37 +190,42 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
     }
 
     @Override
-    protected Control createContents(Composite parent)
-    {
+    protected Control createContents(Composite parent) {
         Control ctl = super.createContents(parent);
         if (!isModeless()) {
-            getButton(IDialogConstants.OK_ID).setEnabled(false);
+            enableButton(IDialogConstants.OK_ID, false);
         }
         return ctl;
     }
 
+    @NotNull
     public List<T> getSelectedObjects()
     {
         return selectedObjects;
     }
 
-    public T getSelectedObject()
-    {
-        return selectedObjects.isEmpty() ? null : selectedObjects.get(0);
+    @Nullable
+    public T getSelectedObject() {
+        return selectedObjects.isEmpty() ? null : selectedObjects.getFirst();
     }
 
-    public static <T extends DBPObject> T selectObject(Shell parentShell, String title, String listId, Collection<T> objects)
-    {
+    @Nullable
+    public static <T extends DBPObject> T selectObject(
+        @NotNull Shell parentShell,
+        @NotNull String title,
+        @NotNull String listId,
+        @NotNull Collection<T> objects
+    ) {
         ObjectListDialog<T> scDialog = new ObjectListDialog<>(parentShell, title, true, listId, objects, null);
         if (scDialog.open() == IDialogConstants.OK_ID) {
             final List<T> selectedObjects = scDialog.getSelectedObjects();
-            return CommonUtils.isEmpty(selectedObjects) ? null : selectedObjects.get(0);
+            return CommonUtils.isEmpty(selectedObjects) ? null : selectedObjects.getFirst();
         } else {
             return null;
         }
     }
 
-    private static class DialogObjectListControl<T extends DBPObject> extends DatabaseObjectListControl<T> implements DBNNodeReference {
+    private class DialogObjectListControl extends DatabaseObjectListControl<T> implements DBNNodeReference {
         private final Composite group;
         private final String listId;
         private final DBRRunnableWithResult<List<T>> objectReader;
@@ -207,12 +235,12 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
         private final ISearchExecutor searcher;
 
         public DialogObjectListControl(
-            Composite group,
+            @NotNull Composite group,
             boolean singleSelection,
-            String listId,
-            DBRRunnableWithResult<List<T>> objectReader,
+            @NotNull String listId,
+            @NotNull DBRRunnableWithResult<List<T>> objectReader,
             boolean isSetFocusAfterLoad,
-            List<T> selectedObjects
+            @NotNull List<T> selectedObjects
         ) {
             super(group, (singleSelection ? SWT.SINGLE : SWT.MULTI), null, new ListContentProvider());
             this.group = group;
@@ -246,7 +274,7 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
                 },
                 new ObjectsLoadVisualizer() {
                     @Override
-                    public void completeLoading(Collection<T> items) {
+                    public void completeLoading(@Nullable Collection<T> items) {
                         super.completeLoading(items);
                         performSearch(SearchType.NONE, false);
                         if (isSetFocusAfterLoad) {
@@ -263,8 +291,8 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
         @NotNull
         @Override
         protected Object getObjectValue(@NotNull T item) {
-            if (item instanceof DBSWrapper) {
-                return ((DBSWrapper) item).getObject();
+            if (item instanceof DBSWrapper wrapper && wrapper.getObject() != null) {
+                return wrapper.getObject();
             }
             return super.getObjectValue(item);
         }
@@ -286,15 +314,17 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
             if (selectedObjects != null) {
                 getItemsViewer().setSelection(new StructuredSelection(selectedObjects), true);
             }
+            handleObjectsLoaded(items, append);
+            updateButtons();
         }
 
         @Override
-        public void fillCustomActions(IContributionManager contributionManager) {
+        public void fillCustomActions(@NotNull IContributionManager contributionManager) {
             super.fillCustomActions(contributionManager);
             addColumnConfigAction(contributionManager);
         }
 
-        protected void addSearchAction(IContributionManager contributionManager) {
+        protected void addSearchAction(@NotNull IContributionManager contributionManager) {
             contributionManager.add(new Action("Filter objects", DBeaverIcons.getImageDescriptor(UIIcon.SEARCH)) {
                 @Override
                 public void run() {
@@ -303,6 +333,7 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
             });
         }
 
+        @Nullable
         @Override
         protected ISearchExecutor getSearchRunner() {
             return searcher;
@@ -310,7 +341,7 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
 
         @Override
         public DBNNode getReferencedNode() {
-            return selectedObjects.isEmpty() ? null : selectedObjects.get(0) instanceof DBNNode node ? node : null;
+            return selectedObjects.isEmpty() ? null : selectedObjects.getFirst() instanceof DBNNode node ? node : null;
         }
 
         class ObjectLabelProvider extends ObjectColumnLabelProvider implements IFontProvider {
@@ -320,15 +351,19 @@ public class ObjectListDialog<T extends DBPObject> extends AbstractPopupPanel {
 
             @Override
             public Font getFont(Object element) {
-                if (selectedObjects.contains(element)) {
-                    if (boldFont == null) {
-                        boldFont = UIUtils.makeBoldFont(group.getFont());
-                        group.addDisposeListener(e -> boldFont.dispose());
+                if (element instanceof DBSWrapper wrapper && objectColumn.isNameColumn(wrapper.getObject())) {
+                    if (DBNUtils.isDefaultElement(element)) {
+                        return BaseThemeSettings.instance.treeAndTableFontBold;
+                    } else if (selectedObjects.contains(element)) {
+                        return BaseThemeSettings.instance.treeAndTableFontItalic;
                     }
-                    return boldFont;
                 }
                 return null;
             }
         }
+    }
+
+    protected  void handleObjectsLoaded(@NotNull Collection<T> items, boolean append) {
+        // Just a listener
     }
 }
